--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,11 @@
-.App{
-    text-align: center;
-    box-shadow:  0 .3rem .3rem rgba(255, 9, 9, 0.562);
-    padding: 1rem;
-}
-
-button{
-    padding: 1rem;
-    font-size: 1.2rem;
-    background-color: aqua;
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
